<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_Main"
        android:layout_width="@dimen/Img_Width"
        android:layout_height="@dimen/Img_Height"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/s_images" />

    <Button
        android:id="@+id/btn_rst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/rst_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/strStartEng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/down_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_up"
        android:layout_width="@dimen/Img_Width"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/up_Button"
        app:layout_constraintBottom_toTopOf="@+id/btn_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_down" />

    <TextView
        android:id="@+id/txv_Bet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:text="@string/msg_bet"
        app:layout_constraintBottom_toTopOf="@+id/btn_str"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_Coin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/msg_coin"
        app:layout_constraintBottom_toTopOf="@+id/txv_bet2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_Slot_Msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txv_Slot_Msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Main"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/txv_Coin_Msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txv_coin"
        app:layout_constraintBottom_toTopOf="@+id/txv_Coin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_bet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/txv_bet"
        app:layout_constraintBottom_toTopOf="@+id/txv_Bet"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>