<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageButton
        android:id="@+id/slot_Button2"
        android:layout_width="@dimen/Img_Width"
        android:layout_height="@dimen/Img_Height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        app:srcCompat="@drawable/question" />

    <ImageButton
        android:id="@+id/slot_Button1"
        android:layout_width="@dimen/Img_Width"
        android:layout_height="@dimen/Img_Height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/slot_Button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slot_Button2"
        app:srcCompat="@drawable/question" />

    <ImageButton
        android:id="@+id/slot_Button3"
        android:layout_width="@dimen/Img_Width"
        android:layout_height="@dimen/Img_Height"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/slot_Button2"
        app:layout_constraintTop_toTopOf="@+id/slot_Button2"
        app:srcCompat="@drawable/question" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/rtn_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_sb"
        android:layout_width="@dimen/Img_Width"
        android:layout_height="@dimen/Img_Height"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/s_images" />

    <TextView
        android:id="@+id/txv_coin"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:text="@string/msg_coin2"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/txv_bet2"
        app:layout_constraintBottom_toTopOf="@+id/txv_bet2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_bet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/msg_bet2"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/txv_coin2"
        app:layout_constraintBottom_toTopOf="@+id/txv_coin"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_stp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stp_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_Button2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txv_br"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stp"
        app:layout_constraintVertical_bias="0.261" />

</android.support.constraint.ConstraintLayout>